@@ -1,3 +1,8 @@
+Wed Sep 11 12:46:23 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>
+
+	* commit.c (precommit_list_proc): Fix typo in last change
+	(->status to ->type).
+
 Tue Sep 10 23:05:41 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>
 
 	* Makefile.in (DISTFILES): Add build_src.com.
